# mobile-assets-backend

./: .gitignore  CMakeLists.txt  README.md
data/: onboarding.json  templates.json  tools.json
scripts/: apply_inpaint_mask.py  create_object_mask.py  create_object_mask_sam.py  prepare_manual_cleanup_mask.py  upscale_image.py
scripts/background/: remove_background.py
scripts/common/: convert_image_to_png.py
scripts/generation/: create_prompt_collage.py
scripts/scene/: composite_subject_on_background.py
scripts/unused/: create_object_mask.py  remove_objects.py
scripts/upscale/: upscale_image.py
src/: api_handler.cpp  api_handler.h  catalog_service.cpp  catalog_service.h  generation_service.cpp  generation_service.h  http_server.cpp  http_server.h  main.cpp  output_service.cpp  output_service.h  template_asset_service.cpp  template_asset_service.h  upload_service.cpp  upload_service.h
src/action_runners/: ai_enhancer_runner.cpp  ai_enhancer_runner.h  change_scene_runner.cpp  change_scene_runner.h  glam_makeup_runner.cpp  glam_makeup_runner.h  prompt_runner.cpp  prompt_runner.h  remove_background_runner.cpp  remove_background_runner.h  remove_objects_cleanup_runner.cpp  remove_objects_cleanup_runner.h  remove_objects_mask_runner.cpp  remove_objects_mask_runner.h  remove_objects_runner.cpp  remove_objects_runner.h  skin_improve_runner.cpp  skin_improve_runner.h  smile_edit_runner.cpp  smile_edit_runner.h  template_runner.cpp  template_runner.h  tool_action_runner.cpp  tool_action_runner.h  upscale_runner.cpp  upscale_runner.h
src/comfy/: comfy_client.cpp  comfy_client.h  workflow_builder.cpp  workflow_builder.h
src/face_edit/: face_edit_plan.cpp  face_edit_plan.h  face_editor.cpp  face_editor.h  face_masks.cpp  face_masks.h  face_parser.cpp  face_parser.h  face_regions.cpp  face_regions.h
src/generation/: generation_action_router.cpp  generation_action_router.h  generation_json.cpp  generation_json.h  generation_task_store.cpp  generation_task_store.h  generation_template_workflow.cpp  generation_template_workflow.h  (+2 more)
storage/: tasks.json
workflows/: ai_enhancer.json  change_scene_background.json  remove_objects_cleanup_inpaint.json  remove_objects_inpaint.json  smile_edit_liveportrait.json  template_img2img.json  tool_img2img.json  unused_change_scene_inpaint.json
(+39 files in other folders)
